--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
     "firebase": "^5.8.0",
+    "ng2-search-filter": "^0.4.7",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
